# bot

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
source/cogs/: rooms.py
source/internal/: __init__.py  bot.py  help.py
